<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.RoomsFragment">

    <LinearLayout
        android:id="@+id/rooms_fault"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
        <RelativeLayout
            android:id="@+id/layout_ti_zhu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/device_ti_zhu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="天竺"
                android:textSize="22sp" />
            <TextView
                android:id="@+id/ti_zhu_alarm_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/device_ti_zhu"
                android:text="待确定报警："
                android:textSize="18sp" />
            <TextView
                android:id="@+id/ti_zhu_alarm_confirm_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/device_ti_zhu"
                android:layout_toEndOf="@+id/ti_zhu_alarm_confirm"
                android:textSize="18sp"
                android:text="0"/>
            <TextView
                android:id="@+id/ti_zhu_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_zhu_alarm_confirm"
                android:textSize="18sp"
                android:text="报&#12288;&#12288;&#12288;警："/>
            <TextView
                android:id="@+id/ti_zhu_alarm_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_zhu_alarm_confirm_num"
                android:layout_toEndOf="@+id/ti_zhu_alarm"
                android:textSize="18sp"
                android:text="0"/>
            <TextView
                android:id="@+id/ti_zhu_already"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_zhu_alarm"
                android:textSize="18sp"
                android:text="已&#12288;就&#12288;绪："/>
            <TextView
                android:id="@+id/ti_zhu_already_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_zhu_alarm_num"
                android:layout_toEndOf="@+id/ti_zhu_already"
                android:textSize="18sp"
                android:text="0"/>
            <TextView
                android:id="@+id/ti_zhu_running"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_zhu_already"
                android:textSize="18sp"
                android:text="运&#12288;行&#12288;数："/>
            <TextView
                android:id="@+id/ti_zhu_running_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_zhu_already_num"
                android:layout_toEndOf="@+id/ti_zhu_running"
                android:textSize="18sp"
                android:text="0"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_yi_chang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/device_yi_chang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="宜昌"
                android:textSize="22sp" />
            <TextView
                android:id="@+id/yi_chang_alarm_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/device_yi_chang"
                android:text="待确定报警："
                android:textSize="18sp" />
            <TextView
                android:id="@+id/yi_chang_alarm_confirm_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/device_yi_chang"
                android:layout_toEndOf="@+id/yi_chang_alarm_confirm"
                android:textSize="18sp"
                android:text="0"/>
            <TextView
                android:id="@+id/yi_chang_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/yi_chang_alarm_confirm"
                android:textSize="18sp"
                android:text="报&#12288;&#12288;&#12288;警："/>
            <TextView
                android:id="@+id/yi_chang_alarm_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/yi_chang_alarm_confirm_num"
                android:layout_toEndOf="@+id/yi_chang_alarm"
                android:textSize="18sp"
                android:text="0"/>
            <TextView
                android:id="@+id/yi_chang_already"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/yi_chang_alarm"
                android:textSize="18sp"
                android:text="已&#12288;就&#12288;绪："/>
            <TextView
                android:id="@+id/yi_chang_already_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/yi_chang_alarm_num"
                android:layout_toEndOf="@+id/yi_chang_already"
                android:textSize="18sp"
                android:text="0"/>
            <TextView
                android:id="@+id/yi_chang_running"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/yi_chang_already"
                android:textSize="18sp"
                android:text="运&#12288;行&#12288;数："/>
            <TextView
                android:id="@+id/yi_chang_running_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/yi_chang_already_num"
                android:layout_toEndOf="@+id/yi_chang_running"
                android:textSize="18sp"
                android:text="0"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_allma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/device_allma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="ALLMA"
                android:textSize="22sp" />
            <TextView
                android:id="@+id/allma_alarm_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/device_allma"
                android:text="待确定报警："
                android:textSize="18sp" />
            <TextView
                android:id="@+id/allma_alarm_confirm_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/device_allma"
                android:layout_toEndOf="@+id/allma_alarm_confirm"
                android:textSize="18sp"
                android:text="0"/>
            <TextView
                android:id="@+id/allma_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/allma_alarm_confirm"
                android:textSize="18sp"
                android:text="报&#12288;&#12288;&#12288;警："/>
            <TextView
                android:id="@+id/allma_alarm_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/allma_alarm_confirm_num"
                android:layout_toEndOf="@+id/allma_alarm"
                android:textSize="18sp"
                android:text="0"/>
            <TextView
                android:id="@+id/allma_already"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/allma_alarm"
                android:textSize="18sp"
                android:text="已&#12288;就&#12288;绪："/>
            <TextView
                android:id="@+id/allma_already_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/allma_alarm_num"
                android:layout_toEndOf="@+id/allma_already"
                android:textSize="18sp"
                android:text="0"/>
            <TextView
                android:id="@+id/allma_running"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/allma_already"
                android:textSize="18sp"
                android:text="运&#12288;行&#12288;数："/>
            <TextView
                android:id="@+id/allma_running_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/allma_already_num"
                android:layout_toEndOf="@+id/allma_running"
                android:textSize="18sp"
                android:text="0"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fault_confirm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <Spinner
                android:id="@+id/spinner_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_rooms"/>
            <Spinner
                android:id="@+id/spinner_device_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/spinner_rooms"
                android:layout_marginLeft="5dp"
                android:prompt="@string/spinner_device_num"/>
            <Spinner
                android:id="@+id/spinner_spindle_side"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner_rooms"
                android:prompt="@string/spinner_spindle_side"/>
            <Spinner
                android:id="@+id/spinner_fault_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/spinner_spindle_side"
                android:layout_below="@+id/spinner_device_num"
                android:layout_marginLeft="5dp"
                android:prompt="@string/spinner_fault_type"/>
            <Button
                android:id="@+id/fault_handle"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_normal_corner"
                android:text="查询"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">
            <Button
                android:id="@+id/select_all"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_normal_corner"
                android:text="全选"/>
            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_normal_corner"
                android:text="确认"/>
        </LinearLayout>
        <ListView
            android:id="@+id/fault_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>